--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRA없이 React 시작하기</title>
+    <title>얼레벌레 개발일지</title>
   </head>
   <body>
     <div id="root"></div>
